--- a/manchesterio/composer.json
+++ b/manchesterio/composer.json
@@ -8,12 +8,9 @@
 	},
 	"autoload": {
 		"classmap": [
-			"app/commands",
 			"app/controllers",
 			"app/models",
-			"app/database/migrations",
-			"app/database/seeds",
-			"app/tests/TestCase.php"
+			"app/tests"
 		]
 	},
 	"scripts": {
