--- a/manchesterio/composer.json
+++ b/manchesterio/composer.json
@@ -6,6 +6,10 @@
 	"require": {
 		"laravel/framework": "4.1.*"
 	},
+    "require-dev": {
+        "squizlabs/php_codesniffer": "1.*",
+        "phpunit/phpunit": "4.0.*"
+    },
 	"autoload": {
 		"classmap": [
 			"app/controllers",
