--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "grunt-cli": "^0.1.13",
     "grunt-composer": "git+ssh://git@github.com/BBC-Knowlearn/grunt-composer#0.3.2",
     "grunt-contrib-copy": "^0.5.0",
-    "grunt-contrib-watch": "^0.6.0"
+    "grunt-contrib-watch": "^0.6.0",
+    "grunt-phpunit": "^0.3.3",
+    "grunt-phpcs": "^0.2.2"
   }
 }
