--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-watch": "^0.6.0",
     "grunt-phpunit": "^0.3.3",
-    "grunt-phpcs": "^0.2.2"
+    "grunt-phpcs": "^0.2.2",
+    "grunt-contrib-compass": "^0.7.2",
+    "grunt-contrib-jshint": "^0.9.2",
+    "grunt-contrib-requirejs": "^0.4.3"
   }
 }
