--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "grunt-phpcs": "^0.2.2",
     "grunt-contrib-compass": "^0.7.2",
     "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-requirejs": "^0.4.3"
+    "grunt-contrib-requirejs": "^0.4.3",
+    "karma-jasmine": "^0.2.2",
+    "grunt-karma": "^0.8.2",
+    "karma-phantomjs-launcher": "^0.1.2",
+    "karma": "^0.12.0",
+    "requirejs": "^2.1.11",
+    "karma-requirejs": "^0.2.1"
   }
 }
