--- a/deploy/Vagrantfile
+++ b/deploy/Vagrantfile
@@ -37,7 +37,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     }
 
     config.vm.synced_folder "site-cookbooks/manchesterio/files/default/static", "/srv/manchester.io/static"
-    config.vm.synced_folder "../manchesterio", "/srv/manchester.io/app"
+    config.vm.synced_folder "../manchesterio", "/srv/manchester.io/app", {:mount_options => %w(dmode=777 fmode=777)}
   end
 
 end
