--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "build",
   "private": true,
   "dependencies": {
-    "requirejs": "~2.1.15"
+    "requirejs": "~2.1.15",
+    "cookies-js": "~1.1.0"
   }
 }
