--- a/manchesterio/requirements.txt
+++ b/manchesterio/requirements.txt
@@ -2,9 +2,11 @@ Flask==0.10.1
 Jinja2==2.7.3
 MarkupSafe==0.23
 Werkzeug==0.9.6
+blinker==1.3
 distribute==0.6.27
 geopy==1.7.0
 gunicorn==19.1.1
 itsdangerous==0.24
+raven==5.1.1
 requests==2.5.1
 wsgiref==0.1.2
