--- a/medlock/requirements.txt
+++ b/medlock/requirements.txt
@@ -9,6 +9,7 @@ anyjson==0.3.3
 billiard==3.3.0.19
 blinker==1.3
 celery==3.1.17
+distribute==0.7.3
 geojson==1.0.9
 gunicorn==19.1.1
 itsdangerous==0.24
@@ -17,4 +18,5 @@ pymongo==2.7.2
 pytz==2014.10
 raven==5.1.1
 requests==2.5.1
+stomp.py==4.0.13
 wsgiref==0.1.2
