--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "grunt": "^0.4.5",
     "grunt-bower": "^0.16.0",
     "grunt-contrib-compass": "^1.0.1",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-contrib-watch": "^0.6.1",
